...
            "state": "translated",
            "value": "다시 시도"
          }
        }
      }
    },
    "guest.login": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Log in / Sign up"
          }
...
            "value": "Terms of Service"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "이용약관"
          }
        }
      }
    },
    "guest.policy.privacy": {
      "localizations": {
...
